--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
         "xml2js": "^0.4.19"
     },
     "scripts": {
-        "prepare": "gulp build-eslint-rules",
+        "prepare": "gulp build-eslint-rules; echo 'prepare fired'",
         "pretest": "gulp tests",
         "test": "gulp runtests-parallel --light=false",
         "test:eslint-rules": "gulp run-eslint-rules-tests",
