--- a/package.json
+++ b/package.json
@@ -104,10 +104,10 @@
         "pretest": "gulp tests",
         "test": "gulp runtests-parallel --light=false",
         "test:eslint-rules": "gulp run-eslint-rules-tests",
-        "build": "npm run build:compiler && npm run build:tests",
-        "build:compiler": "gulp local",
-        "build:tests": "gulp tests",
-        "start": "node lib/tsc",
+        "build": "npm run build:compiler && npm run build:tests; echo 'prepare fired'",
+        "build:compiler": "gulp local; echo 'prepare fired'",
+        "build:tests": "gulp tests; echo 'prepare fired'",
+        "start": "node lib/tsc; echo 'prepare fired'",
         "clean": "gulp clean",
         "gulp": "gulp",
         "jake": "gulp",
